apps/homer/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homer
  namespace: default
  labels:
    app: homer
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: homer
        image: b4bz/homer:latest
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: homer-config
          mountPath: /www/assets
        - name: homer-config-file
          mountPath: /www/assets/config.yml
          subPath: config.yml

        ports:
        - containerPort: 8080
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"

      volumes:
      - name: homer-config
        persistentVolumeClaim:
          claimName: homer-config
      - name: homer-config-file
        configMap:
          name: homer-config
