apps/homer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: default
spec:
  selector:
    app: homer
  ports:
  - name: http
    targetPort: 8080
    port: 8080
