apps/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: homer
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - homer.lab.emc2.build
    secretName: homer-letsencrypt-tls
  rules:
  - host: homer.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: homer
            port:
              number: 8080
        path: /
        pathType: Prefix
